fix: toasts behind not adjusting on close infront

--- a/packages/vanilla-toast/src/styles/index.css
+++ b/packages/vanilla-toast/src/styles/index.css
@@ -50,13 +50,8 @@
     touch-action: none;
 }
 
-[data-toast-container] {
-    position: relative;
+[data-toast-container] > * {
     list-style: none;
-
-    width: 100%;
-    height: 100%;
-
     z-index: 100;
 }
 
